General ui improvment (#358)
* Update landing page

* Update landing page

* Team photo in B&W

* resolve #355

* fix schema updated

--- a/app/views/cook/home/index.html.erb
+++ b/app/views/cook/home/index.html.erb
@@ -19,7 +19,10 @@
           <%= f.input_field "q", label: false, :autofocus => true, :placeholder => "Rechercher un plat...", as: :string %>
         <% end %>
         <% if @random_recipe %>
-          <a class="link-light" href="<%= recipe_path(@random_recipe) %>">Trouver une recette aléatoire</a>
+          <a class="link-light" href="<%= recipe_path(@random_recipe) %>">
+            <i class="fa fa-dice"></i>
+            Trouver une recette aléatoire
+          </a>
         <% end %>
       </div>
     </div>
