--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -57,7 +57,7 @@
   <div class="uk-grid-collapse uk-child-width-expand@s" uk-grid>
     <div class="uk-padding">
       <h2 class="landing-title uk-margin uk-text-center">NOTRE EQUIPE</h2>
-      <p class="uk-text-large uk-text-center uk-padding uk-text-italic">
+      <p class="uk-text-lrge uk-text-center uk-padding uk-text-italic">
         8 collaborateurs, tous issus de l'Epitech - Promo 2020
       </p>
     </div>
