--- a/app/views/landing_pages/shared/_navbar.html.erb
+++ b/app/views/landing_pages/shared/_navbar.html.erb
@@ -8,8 +8,10 @@
           <li><a href="/#our-team" <% if action_name == 'index' %>uk-scroll<% end %>>Notre equipe</a></li>
         </ul>
       </div>
-      <div class="uk-navbar-center uk-visible@xl">
-        <a class="uk-navbar-item uk-logo" href="/">Recipy</a>
+      <div class="uk-navbar-center uk-visible@m">
+        <a class="uk-navbar-item uk-logo" href="/">
+          <img src="<%= asset_path('logo.png') %>" alt="recipy"/>
+        </a>
       </div>
       <div class="uk-navbar-right uk-visible@xl">
         <ul class="uk-navbar-nav">
