--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -34,7 +34,7 @@
     <% else %>
       <div class="uk-margin-small uk-text-center">
         <%= link_to createproducer_path, class: 'uk-button uk-button-primary uk-width-1-1' do %>
-          Devenir producteur
+          <%= t('users.become_producer') %>
         <% end %>
       </div>
     <% end %>
