--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,7 +2,7 @@
   <div class="uk-padding">
     <h2 class="uk-text-center title"><%= t("recipe.title.new") %></h2>
 
-    <%= render 'form', recipe: @recipe %>
+    <%= render 'form' %>
 
     <div class="uk-container">
       <%= link_to t("recipe.action.back"), recipes_path %>
